# modorganizer-uibase

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  vcpkg-configuration.json  vcpkg.json
.github/workflows/: build.yml
include/uibase/: dllimport.h  errorcodes.h  exceptions.h  executableinfo.h  filesystemutilities.h  iexecutable.h  ifiletree.h  imoinfo.h  iplugingame.h  log.h  moassert.h  peextractor.h  pluginrequirements.h  qinipp.h  registry.h  safewritefile.h  steamutility.h  stringutility.h  taskprogressmanager.h  utility.h  versioninfo.h  widgetutility.h
include/uibase/formatters/: strings.h
include/uibase/game_features/: scriptextender.h
include/uibase/linux/: PeExtractor.h  compatibility.h  errorcodes.h  fdcloser.h  icoutils.h  peTypes.h  peextractor.h  stub.h  taskprogressmanager.h  utility_linux.h
include/uibase/win32/: errorcodes.h  taskprogressmanager.h  utility_win32.h
src/: CMakeLists.txt  delayedfilewriter.cpp  dllimport.h  errorcodes.h  expanderwidget.cpp  filesystemutilities.cpp  filterwidget.cpp  ifiletree.cpp  ifiletree.h  imoinfo.h  json.cpp  lineeditclear.cpp  linklabel.cpp  log.cpp  modrepositoryfileinfo.cpp  nxmurl.cpp  pch.h  peextractor.cpp  peextractor.h  petypes.h  pluginrequirements.cpp  questionboxmemory.cpp  registry.cpp  registry.h  report.cpp  safewritefile.cpp  sortabletreewidget.cpp  steamutility.cpp  stringutility.cpp  textviewer.cpp  tutorialcontrol.cpp  uibase_en.ts  utility.cpp  utility.h  version.rc  versioninfo.cpp  versioning.cpp  widgetutility.cpp
src/game_features/: game_feature.h  scriptextender.h
src/linux/: PeExtractor.cpp  compatibility.h  errorcodes.cpp  executableinfo_linux.cpp  fdcloser.cpp  fdcloser.h  icoutils.cpp  log.cpp  log_linux.cpp  peextractor.cpp  registry.cpp  registry_linux.cpp  report_linux.cpp  steamutility_linux.cpp  taskprogressmanager.cpp  taskprogressmanager.h  utility.cpp  utility_linux.cpp  utility_linux.h
src/win32/: log_win32.cpp  registry.cpp  report_win32.cpp  steamutility_win32.cpp  taskprogressmanager.cpp  utility_win32.cpp  utility_win32.h
tests/: test_ifiletree.cpp  test_strings.cpp
